syntax = "proto3";

option csharp_namespace = "CreditRatingShared";

package CreditRatingShared;

service CreditRatingCheck {
	rpc CheckCreditRequest(CreditRequest) returns (CreditReply);
}

message CreditRequest {
	string customerId = 1;
	int32 credit = 2;
}

message CreditReply {
	bool isAcepted = 1;
}